--- a/styles/style.css
+++ b/styles/style.css
@@ -97,14 +97,21 @@ main{
     width: 97.5vw;
 }
 /*pizza items*/
-.shopSection{
-    background-color: #fff;
-    border-radius: 24px;
-
+.titleSection{
+    font-family: 'Monoton', cursive;
+    font-weight: 400;
+    text-align: center;
+    font-size: 3em;
+    margin-top: .5em;
 }
 .pizza1{
+    background-color: #fff;
+    margin: 1rem;
     display: flex;
-    padding: 7%;
+    padding-left: 7%;
+    padding-left: 7%;
+    padding-bottom: 7%;
+    padding-top: 3%;
     height: 50vh;
     border: solid 1px grey;
     border-radius: 24px;
@@ -113,14 +120,18 @@ main{
 .pizza1:hover{
     transform: scale(1.02,1.02);
     border: solid 1px grey;
+    border-radius: 24px;
 }
 .pizza1Content{
     margin: 3%;
     margin-left: 86px;
     text-align: center;
 }
+.pizza1Para{
+    text-align: justify;
+}
 .pizza1Image{
-    width: 40vw;
+    width: 60vw;
 }
 .pizza1Form{
     padding: 1em;
