--- a/styles/style.css
+++ b/styles/style.css
@@ -142,9 +142,16 @@ main{
 .pizza1Image{
     width: 60vw;
 }
-.pizza1Form{
+.pizza1Form select{
     align-self: center;
+    background-color: #e53a02;
+    border: 6px solid transparent;
+    border-radius: 4px;
+    border-color:transparent transparent transparent;
+    cursor: pointer;
 } 
+
+/* selection buttons */
 .pizza1Btn{
     margin: 1em;
     color: #fff;
@@ -153,6 +160,7 @@ main{
     border-radius: 4px;
     transition: all .3s;
     padding: .7rem;
+
     margin-top: -1em;
 }
 .pizza1Btn:hover{
@@ -178,7 +186,6 @@ main{
     border-radius: 4px;
     border-color:transparent transparent transparent;
     cursor: pointer;
-    user-select: none;
     margin: 1em;
     margin-right: 1em;
     margin-left: 1em;
